--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -25,6 +25,7 @@
 
         <!-- Íconos de registro/inicio y carrito -->
         <div class="d-none col-2 tabletIconos">
+            <a href="/prod/add"><i class="fas fa-plus"></i></a>
             <a href="/user/login"><i class="fas fa-user fa-lg"></i></a>
             <a href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
         </div>
@@ -59,6 +60,8 @@
             </div>
         </ul>
         <ul class="navbar-nav pr-0 col-2 my-1 iconos">
+            <li class="nav-item"><a href="/prod/add"><i class="fas fa-plus fa-lg"></i></a></li>
+            <hr>
             <li class="nav-item"><a href="/user/login"><i class="fas fa-user fa-lg"></i></a></li>
             <hr>
             <li class="nav-item"><a href="#"><i class="fas fa-shopping-cart fa-lg"></i></a></li>
