--- a/site/views/productDetail.ejs
+++ b/site/views/productDetail.ejs
@@ -11,10 +11,10 @@
     <!-- Cuerpo del productDetail (pegar debajo)-->
     <main class="container-fluid px-0">
         <div class="row detalle1 mx-0 py-2 mainCard">
-            <span class="migajas px-0 m-0">  > Cat > id</span>
+            <span class="migajas px-0 m-0"> <a href="/">Home</a> > Cat > id</span>
             <span class="migajas px-0 m-0">Marca</span>
             <div class="card col-11 product">
-                <img src="/img/<%- producto.imagen%>" alt="imagen producto" class="card-img-top productImg">
+                <img src="/img/products/<%- producto.imagen%>" alt="imagen producto" class="card-img-top productImg">
                 <div class="card-body mx-0 p-0 money">
                     <h3 class="card-title"><%- producto.marca %> <%- producto.modelo %></h3>
                     <h2 class="card-title precio">$<%- producto.precio %></h2>
