--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -41,7 +41,7 @@
             <h3 class="col-12 mb-0">Bienvenidx (nombre)</h3>
         </div>
             <div class="row vistaProductos mx-0 py-2 mainCard">
-                <h3 class="col-12">Podría interesarte</h3>
+                <h3 class="col-2">Podría interesarte</h3><a href="/prod" class="col-10">Ver todo</a>
                 <div class="card col-5">
                     <img src="/img/intelCeleron.jpg" class="card-img-top" alt="intel celeron">
                     <div class="card-body mx-0 p-0">
