--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -35,27 +35,34 @@
     <div class="collapse navbar-collapse row m-0 pt-2 px-1" id="menuPrincipal">
         <ul class="navbar-nav mr-auto col-10 categorias">
             <div class="row m-0">
+
                 <li class="nav-item col-6">
-                    <i class="fas fa-desktop col-2 p-0"></i>
-                    <br>
-                    <span class="col-8 p-0">COMPUTACIÓN</span>
+                    <a href="/prod/cat/Computadoras">
+                        <i class="fas fa-desktop col-2 p-0"></i>
+                        <br>
+                        <span class="col-8 p-0">COMPUTADORAS</span>
+                    </a>
                 </li>
                 <li class="nav-item col-6">
-                    <i class="fas fa-headphones col-2 p-0"></i>
-                    <br>
-                    <span class="col-10 p-0">AUDIO</span>
+                    <a href="/prod/cat/Audio">
+                        <i class="fas fa-headphones col-2 p-0"></i>
+                        <br>
+                        <span class="col-10 p-0">AUDIO</span>
+                    </a>
                 </li>
                 <li class="nav-item col-6">
-                    <i class="fas fa-gamepad col-2 p-0"></i>
-                    <br>
-                    <span class="col-10 p-0">CONSOLAS</span>
+                    <a href="/prod/cat/Consolas">
+                        <i class="fas fa-gamepad col-2 p-0"></i>
+                        <br>
+                        <span class="col-10 p-0">CONSOLAS</span>
+                    </a>
                 </li>
                 <li class="nav-item col-6">
-                    <i class="far fa-list-alt col-2 p-0"></i>
-                    <br>
-                    <span class="col-10 p-0">
-                        <a href="/prod/cat" id="catHeader">CATEGORIAS</a>
-                    </span>
+                    <a href="/prod/cat">
+                        <i class="far fa-list-alt col-2 p-0"></i>
+                        <br>
+                        <span class="col-10 p-0">CATEGORIAS</span>
+                    </a>
                 </li>
             </div>
         </ul>
