--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -27,7 +27,7 @@
         <div class="d-none col-2 tabletIconos">
             <a href="/prod/add"><i class="fas fa-plus"></i></a>
             <a href="/user/login"><i class="fas fa-user fa-lg"></i></a>
-            <a href="#"><i class="fas fa-shopping-cart fa-lg"></i></a>
+            <a href="/user/cart"><i class="fas fa-shopping-cart fa-lg"></i></a>
         </div>
     </nav>
 
@@ -71,7 +71,7 @@
             <hr>
             <li class="nav-item"><a href="/user/login"><i class="fas fa-user fa-lg"></i></a></li>
             <hr>
-            <li class="nav-item"><a href="#"><i class="fas fa-shopping-cart fa-lg"></i></a></li>
+            <li class="nav-item"><a href="/user/cart"><i class="fas fa-shopping-cart fa-lg"></i></a></li>
         </ul>
         <button type="button" class="navbar-toggler col-2 px-0 menu cierre" data-toggle="collapse"
             data-target="#menuPrincipal" aria-controls="menuPrincipal" aria-expanded="true" aria-label="Menú pincipal">
