--- a/site/views/productDetail.ejs
+++ b/site/views/productDetail.ejs
@@ -36,7 +36,7 @@
                     </form>
                     <div class="col-12 row">
                         <a href="/prod/<%- producto.id %>/edit" class="btn ">Editar</a>
-                        <form action="/prod/:id/delete?_method=DELETE" method="POST">
+                        <form action="/prod/<%- producto.id %>/delete?_method=DELETE" method="POST">
                             <input type="submit" value="Borrar" class="btn">
                         </form>
                     </div>
