--- a/site/views/ingreso.ejs
+++ b/site/views/ingreso.ejs
@@ -30,7 +30,7 @@
       <input class="controls" type="email" name="email" placeholder="Ingresá tu correo" required>
       <input class="controls" type="password" name="password" placeholder="Ingresá tu contraseña" required>
       <input class="botons" type="submit" value="Ingresar">
-      <p> <input type="checkbox" name="checkbox" id="checkbox"> <strong>recordarme </strong> </p>
+      <input type="checkbox" name="recordar"> <strong>Recordar sesión</strong>
       <p> ¿No tenés cuenta? <a href="/user/registro"><strong> Crear cuenta </strong></a></p>
 
       <p class="derechos">Todos los derechos reservados 2020 Insumos Onboard </p>
