--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -25,15 +25,32 @@
 
         <!-- Íconos de registro/inicio y carrito -->
         <div class="d-none col-2 tabletIconos">
-            <a href="/prod/add"><i class="fas fa-plus"></i></a>
-            <a href="/user/login"><i class="fas fa-user fa-lg"></i></a>
-            <a href="/user/cart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+            <% if (locals.user == undefined){ %>
+
+                <a href="/user/login"><i class="fas fa-user fa-lg"></i></a>
+
+            <% } else { %>
+
+                <a href="/user/cart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+                
+
+                <% if (locals.user.admin == true){ %>
+
+                    <a href="/prod/add"><i class="fas fa-plus"></i></a>
+
+                <% } %>
+
+                <a href="/user/logout"><i class="fas fa-sign-out-alt"></i></a>
+            <% } %>
+            
+            
+            
         </div>
     </nav>
 
     <!-- Contenido del menú principal -->
-    <div class="collapse navbar-collapse row m-0 pt-2 px-1" id="menuPrincipal">
-        
+    <div class="collapse navbar-collapse row m-0 pt-2 px-1" id="menuPrincipal">       
+
         <ul class="navbar-nav mr-auto col-10 categorias">
             <div class="row m-0">
 
@@ -68,11 +85,23 @@
             </div>
         </ul>
         <ul class="navbar-nav pr-0 col-2 my-1 iconos">
-            <li class="nav-item"><a href="/prod/add"><i class="fas fa-plus fa-lg"></i></a></li>
-            <hr>
-            <li class="nav-item"><a href="/user/login"><i class="fas fa-user fa-lg"></i></a></li>
-            <hr>
-            <li class="nav-item"><a href="/user/cart"><i class="fas fa-shopping-cart fa-lg"></i></a></li>
+            <% if (locals.user == undefined){ %>
+
+                <a href="/user/login"><i class="fas fa-user fa-lg"></i></a>
+
+            <% } else { %>
+
+                <a href="/user/cart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+
+                <% if (locals.user.admin == true){ %>
+
+                    <a href="/prod/add"><i class="fas fa-plus"></i></a>
+
+                <% } %>
+                
+                <a href="/user/logout"><i class="fas fa-sign-out-alt"></i></a>
+
+            <% } %>
         </ul>
         <button type="button" class="navbar-toggler col-2 px-0 menu cierre" data-toggle="collapse"
             data-target="#menuPrincipal" aria-controls="menuPrincipal" aria-expanded="true" aria-label="Menú pincipal">
