--- a/site/views/agregarCat.ejs
+++ b/site/views/agregarCat.ejs
@@ -15,9 +15,34 @@
         <div class="row row_prod">
             <div class="col-12">
                 <form action="/prod/add/cat" method="POST">
-                    <label for="">Nombre de categoría:</label> <input type="text" name="name">
+                    <label for="">Nombre de categoría:</label> <input type="text" name="name" required>
                     <br>
-                    <label for="">Ícono de categoría:</label> <input type="text" name="icon">
+                    <label for="">Elige un ícono adecuado a la categoría:</label>
+                    <br>
+                    <input type="radio" value="fas fa-desktop" name="icon"><i class="fas fa-desktop"></i>
+                    <br>
+                    <input type="radio" value="fas fa-hdd" name="icon"><i class="fas fa-hdd"></i>
+                    <br>
+                    <input type="radio" value="fas fa-headphones" name="icon"><i class="fas fa-headphones"></i>
+                    <br>
+                    <input type="radio" value="fas fa-keyboard" name="icon"><i class="fas fa-keyboard"></i>
+                    <br>
+                    <input type="radio" value="fas fa-laptop" name="icon"><i class="fas fa-laptop"></i>
+                    <br>
+                    <input type="radio" value="fas fa-memory" name="icon"><i class="fas fa-memory"></i>
+                    <br>
+                    <input type="radio" value="fas fa-microchip" name="icon"><i class="fas fa-microchip"></i>
+                    <br>
+                    <input type="radio" value="fas fa-mobile-alt" name="icon"><i class="fas fa-mobile-alt"></i>
+                    <br>
+                    <input type="radio" value="fas fa-mouse" name="icon"><i class="fas fa-mouse"></i>
+                    <br>
+                    <input type="radio" value="fas fa-plug" name="icon"><i class="fas fa-plug"></i>
+                    <br>
+                    <input type="radio" value="fas fa-sd-card" name="icon"><i class="fas fa-sd-card"></i>
+                    <br>
+                    <input type="radio" value="fas fa-gamepad" name="icon"><i class="fas fa-gamepad"></i>
+
                     <br>
                     <input type="submit" class="btn" value="AGREGAR">
                 </form>
