--- a/site/public/css/index.css
+++ b/site/public/css/index.css
@@ -19,6 +19,11 @@ main .mainCard{
     border-radius: .75rem!important;
     background-color: var(--color-gris);
 }
+img.card-img-top{
+    width: 150px!important;
+    height: 150px!important;
+}
+
 
 
 main div.bienvenidx{
@@ -29,7 +34,15 @@ main div.bienvenidx{
 main div.vistaProductos{
     margin-top: 1rem!important;
     justify-content: space-around!important;
-    text-align: left;
+    text-align: center;
+}
+
+h6.card-title{
+    width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: center;
 }
 
 main div.vistaProductos div.card div.card-body a{
@@ -73,7 +86,7 @@ main div.seccionCategorias div p{
     main div.vistaProductos div.card{
         flex-basis: 27.5%!important;
         max-width: 27.5%!important;
-        margin: 0 .5rem!important;
+        margin:  .5rem!important;
     }
     main div.vistaProductos div.movilH{
         display: block!important;
@@ -98,7 +111,7 @@ main div.seccionCategorias div p{
     main div.vistaProductos div.card{
         flex-basis: 30%!important;
         max-width: 30%!important;
-        margin: 0 .5rem!important;
+        margin:  .5rem!important;
     }
     main div.vistaProductos div.movilH{
         display: block!important;
