--- a/site/views/categorias.ejs
+++ b/site/views/categorias.ejs
@@ -5,24 +5,24 @@
 
 <body>
     <!-- partial del header --><%- include(`./partials/header.ejs`) %>
-    <div class=="container-fluid sticky-top catPadre">
-        <div class="row" id="cat1">
-            <!-- listado de categorias -->
-
-            <% categorias.forEach(categoria => { %>
-
-            <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 cat_items">
-                <a href="/prod/cat/<%- categoria.nombre%>">
-                    <i class="<%-categoria.icono%> cat-icon"></i>
-                    <p><%-categoria.nombre%></p>
-                </a>
-            </div>
-
-            <% }) %>
-
-
+    
+    <main class="container-fluid px-0">
+        <div class="bienvenidx row mx-0 py-2 mainCard">
+          <h4 class="col-12">Nuestras categorías / <a href="/prod"">Nuestros productos</a></h4>
         </div>
-    </div>
+          <div class=" row vistaProductos mx-0 py-2 mainCard ">
+          <% categorias.forEach(categoria => { %>
+            <div class=" card col-5 my-3">
+              <a href="/prod/cat/<%= categoria.nombre %>">
+                <i class="<%-categoria.icono%> card-img-top"></i>
+                <div class="card-body mx-0 p-0">
+                  <h6 class="card-title"><%= categoria.nombre %></h6>
+                </div>
+              </a>
+        </div>
+        <% }) %>
+        </div>
+      </main>
     <!-- partial del footer -->
     <%- include(`./partials/footer.ejs`) %>
     <!-- partial de scripts -->
