--- a/site/views/productDetail.ejs
+++ b/site/views/productDetail.ejs
@@ -13,7 +13,7 @@
         <div class="row detalle1 mx-0 py-2 mainCard">
             <span class="migajas px-0 m-0">
                 <a href="/">Home</a> >
-                <a href="/prod/cat/<%-producto.categoria%>"><%-producto.categoria%></a> >
+                <a href="/prod/cat/<%-producto.id%>"><%-producto.categoria.nombre%></a> >
                 <a href="/prod/det/<%-producto.id%>"><%-producto.id %></a> >
                 <a href="/prod/marca/<%- producto.marca %>"><%- producto.marca %></a>
             </span>
