--- a/site/views/productEdit.ejs
+++ b/site/views/productEdit.ejs
@@ -14,7 +14,7 @@
     <div class="container-fluid add_prod">
         <div class="row row_prod">
             <div class="col-12">
-                <form action="/prod/<%- producto.id %>/edit?_method=PUT" method="POST">
+                <form action="/prod/<%- producto.id %>/edit?_method=PUT" method="POST" enctype="multipart/form-data">
                     <!-- Nombre del producto -->
                     <p>
                         <input type="text" name="marca" value="<%- producto.marca %>" required >
@@ -27,6 +27,11 @@
                         <textarea rows="6" cols="35" name="descripcion"
                             required> <%- producto.descripcion %></textarea>
                     </p>
+                    <!-- Imagen -->
+                    <p>
+                        <img src="/img/products/<%- producto.imagen%>" alt="Imagen del producto">
+                        <input type="file" name="imagen">
+                    </p>
                     <!-- Categoría -->
                     <p>
                         <label for="categoria">Elije la categoria:</label><br>
@@ -34,7 +39,7 @@
 
                             <% categorias.forEach(categoria => { %>
 
-                            <option value="<%- categoria.nombre %>"><%- categoria.nombre %> </option>
+                            <option value="<%- categoria.id %>"><%- categoria.nombre %> </option>
 
                             <% }) %>
 
@@ -43,6 +48,9 @@
                     <!-- Precio -->
                     <p>
                         <input type="number" name="precio" value="<%- producto.precio %>"placeholder="Precio">
+                    </p>
+                    <p>
+                        <input type="text" name="descuento" value="<%- producto.descuento %>" placeholder="Descuento">
                     </p>
                     <!-- boton "agregar" -->
                     <p>
