--- a/site/views/index.ejs
+++ b/site/views/index.ejs
@@ -108,28 +108,28 @@
 
             <% if (i < 3){ %>
             <div class="col-2 p-0">
-                <a href="/prod/cat/<%- categorias[i].nombre %>">
+                <a href="/prod/cat/<%- categorias[i].id %>">
                     <i class="<%- categorias[i].icono %>"></i>
                     <p><%- categorias[i].nombre %></p>
                 </a>
             </div>
             <% } else if (i < 4){%>
             <div class="col-2 p-0 d-none catM">
-                <a href="/prod/cat/<%- categorias[i].nombre %>">
+                <a href="/prod/cat/<%- categorias[i].id %>">
                     <i class="<%- categorias[i].icono %>"></i>
                     <p><%- categorias[i].nombre %></p>
                 </a>
             </div>
             <% } else if (i < 5){%>
             <div class="col-2 p-0 d-none catT">
-                <a href="/prod/cat/<%- categorias[i].nombre %>">
+                <a href="/prod/cat/<%- categorias[i].id %>">
                     <i class="<%- categorias[i].icono %>"></i>
                     <p><%- categorias[i].nombre %></p>
                 </a>
             </div>
             <% } else {%>
             <div class="col-2 p-0 d-none catPA">
-                <a href="/prod/cat/<%- categorias[i].nombre %>">
+                <a href="/prod/cat/<%- categorias[i].id %>">
                     <i class="<%- categorias[i].icono %>"></i>
                     <p><%- categorias[i].nombre %></p>
                 </a>
