--- a/site/views/partials/header.ejs
+++ b/site/views/partials/header.ejs
@@ -56,21 +56,21 @@
             <div class="row m-0">
 
                 <li class="nav-item col-6">
-                    <a href="/prod/cat/Computadoras">
+                    <a href="/prod/cat/4">
                         <i class="fas fa-desktop col-2 p-0"></i>
                         <br>
                         <span class="col-8 p-0">COMPUTADORAS</span>
                     </a>
                 </li>
                 <li class="nav-item col-6">
-                    <a href="/prod/cat/Audio">
+                    <a href="/prod/cat/2">
                         <i class="fas fa-headphones col-2 p-0"></i>
                         <br>
                         <span class="col-10 p-0">AUDIO</span>
                     </a>
                 </li>
                 <li class="nav-item col-6">
-                    <a href="/prod/cat/Consolas">
+                    <a href="/prod/cat/3">
                         <i class="fas fa-gamepad col-2 p-0"></i>
                         <br>
                         <span class="col-10 p-0">CONSOLAS</span>
